<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HereICome</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Contacts</string>
    <string name="action_settings">Settings</string>

    <string name="contact_name">Name</string>
    <string name="contact_nick">Nickname</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_email">Email</string>
    <string name="contact_save_button">Save</string>

</resources>
